--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -68,9 +68,6 @@
 
     --radius: 0.5rem;
   }
-}
-
-@layer base {
   * {
     @apply border-border;
   }
@@ -78,4 +75,8 @@
     @apply bg-background text-foreground;
     font-feature-settings: 'rlig' 1, 'calt' 1;
   }
+  li{
+    @apply list-none;
+  }
 }
+
